--- a/webknossos/tests/cassettes/test_examples/test_apply_merger_mode.yml
+++ b/webknossos/tests/cassettes/test_examples/test_apply_merger_mode.yml
@@ -21,13 +21,13 @@ http_interactions:
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Mon, 09 Dec 2024 14:09:28 GMT
+        date: Fri, 13 Dec 2024 09:20:34 GMT
         content-type: application/json
         content-length: '682'
       body:
         encoding: utf8
         data: >-
-          {"id":"570b9f4d2a7c0e4d008da6ef","email":"user_A@scalableminds.com","firstName":"user_A","lastName":"last_A","isAdmin":true,"isOrganizationOwner":true,"isDatasetManager":true,"isActive":true,"teams":[{"id":"570b9f4b2a7c0e3b008da6ec","name":"team_X1","isTeamManager":true},{"id":"59882b370d889b84020efd3f","name":"team_X3","isTeamManager":false},{"id":"59882b370d889b84020efd6f","name":"team_X4","isTeamManager":true}],"experiences":{"abc":5},"lastActivity":1733753095190,"isAnonymous":false,"isEditable":true,"organization":"Organization_X","novelUserExperienceInfos":{},"selectedTheme":"auto","created":1460379469000,"lastTaskTypeId":null,"isSuperUser":true,"isEmailVerified":true}
+          {"id":"570b9f4d2a7c0e4d008da6ef","email":"user_A@scalableminds.com","firstName":"user_A","lastName":"last_A","isAdmin":true,"isOrganizationOwner":true,"isDatasetManager":true,"isActive":true,"teams":[{"id":"570b9f4b2a7c0e3b008da6ec","name":"team_X1","isTeamManager":true},{"id":"59882b370d889b84020efd3f","name":"team_X3","isTeamManager":false},{"id":"59882b370d889b84020efd6f","name":"team_X4","isTeamManager":true}],"experiences":{"abc":5},"lastActivity":1734081422521,"isAnonymous":false,"isEditable":true,"organization":"Organization_X","novelUserExperienceInfos":{},"selectedTheme":"auto","created":1460379469000,"lastTaskTypeId":null,"isSuperUser":true,"isEmailVerified":true}
         compression: none
   - request:
       method: GET
@@ -51,13 +51,13 @@ http_interactions:
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Mon, 09 Dec 2024 14:09:28 GMT
+        date: Fri, 13 Dec 2024 09:20:34 GMT
         content-type: application/json
         content-length: '1456'
       body:
         encoding: utf8
         data: >-
-          {"id":"59e9cfbdba632ac2ab8b23b5","name":"l4_sample","dataSource":{"id":{"name":"l4_sample","team":"Organization_X"},"dataLayers":[{"name":"color","category":"color","boundingBox":{"topLeft":[3072,3072,512],"width":1024,"height":1024,"depth":1024},"resolutions":[[1,1,1],[2,2,1],[4,4,1],[8,8,2],[16,16,4]],"elementClass":"uint8","defaultViewConfiguration":{"color":[255,0,0]}},{"name":"segmentation","category":"segmentation","boundingBox":{"topLeft":[3072,3072,512],"width":1024,"height":1024,"depth":1024},"resolutions":[[1,1,1],[2,2,1],[4,4,1],[8,8,2],[16,16,4]],"elementClass":"uint32","largestSegmentId":2504697}],"scale":{"factor":[11.239999771118164,11.239999771118164,28],"unit":"nanometer"}},"dataStore":{"name":"localhost","url":"http://localhost:9000","isScratch":false,"allowsUpload":true,"jobsSupportedByAvailableWorkers":[],"jobsEnabled":false},"owningOrganization":"Organization_X","allowedTeams":[{"id":"570b9f4b2a7c0e3b008da6ec","name":"team_X1","organization":"Organization_X"}],"allowedTeamsCumulative":[{"id":"570b9f4b2a7c0e3b008da6ec","name":"team_X1","organization":"Organization_X"}],"isActive":true,"isPublic":true,"description":null,"created":1508495293789,"isEditable":true,"lastUsedByUser":1733753369087,"logoUrl":"/assets/images/mpi-logos.svg","sortingKey":1508495293789,"metadata":[],"isUnreported":false,"tags":[],"folderId":"570b9f4e4bb848d0885ea917","publication":null,"usedStorageBytes":1692207513,"displayName":"l4_sample"}
+          {"id":"59e9cfbdba632ac2ab8b23b5","name":"l4_sample","dataSource":{"id":{"name":"l4_sample","team":"Organization_X"},"dataLayers":[{"name":"color","category":"color","boundingBox":{"topLeft":[3072,3072,512],"width":1024,"height":1024,"depth":1024},"resolutions":[[1,1,1],[2,2,1],[4,4,1],[8,8,2],[16,16,4]],"elementClass":"uint8","defaultViewConfiguration":{"color":[255,0,0]}},{"name":"segmentation","category":"segmentation","boundingBox":{"topLeft":[3072,3072,512],"width":1024,"height":1024,"depth":1024},"resolutions":[[1,1,1],[2,2,1],[4,4,1],[8,8,2],[16,16,4]],"elementClass":"uint32","largestSegmentId":2504697}],"scale":{"factor":[11.239999771118164,11.239999771118164,28],"unit":"nanometer"}},"dataStore":{"name":"localhost","url":"http://localhost:9000","isScratch":false,"allowsUpload":true,"jobsSupportedByAvailableWorkers":[],"jobsEnabled":false},"owningOrganization":"Organization_X","allowedTeams":[{"id":"570b9f4b2a7c0e3b008da6ec","name":"team_X1","organization":"Organization_X"}],"allowedTeamsCumulative":[{"id":"570b9f4b2a7c0e3b008da6ec","name":"team_X1","organization":"Organization_X"}],"isActive":true,"isPublic":true,"description":null,"created":1508495293789,"isEditable":true,"lastUsedByUser":1734081634630,"logoUrl":"/assets/images/mpi-logos.svg","sortingKey":1508495293789,"metadata":[],"isUnreported":false,"tags":[],"folderId":"570b9f4e4bb848d0885ea917","publication":null,"usedStorageBytes":1692207513,"displayName":"l4_sample"}
         compression: none
   - request:
       method: POST
@@ -82,17 +82,17 @@ http_interactions:
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Mon, 09 Dec 2024 14:09:28 GMT
+        date: Fri, 13 Dec 2024 09:20:34 GMT
         content-type: application/json
         content-length: '34'
       body:
         encoding: utf8
-        data: '{"token":"IoMFwd2H-02oM-BQMVHoIg"}'
+        data: '{"token":"3KhTq4TUt_f7SFVN-57jzw"}'
         compression: none
   - request:
       method: GET
       path: >-
-        /data/datasets/Organization_X/l4_sample/layers/color/data?mag=1-1-1&x=3457&y=3323&z=1204&width=40&height=10&depth=10&token=IoMFwd2H-02oM-BQMVHoIg
+        /data/datasets/Organization_X/l4_sample/layers/color/data?mag=1-1-1&x=3457&y=3323&z=1204&width=40&height=10&depth=10&token=3KhTq4TUt_f7SFVN-57jzw
       headers:
         host: localhost:9000
         accept: '*/*'
@@ -114,7 +114,7 @@ http_interactions:
         access-control-allow-origin: '*'
         access-control-expose-headers: MISSING-BUCKETS
         x-permitted-cross-domain-policies: master-only
-        date: Mon, 09 Dec 2024 14:09:28 GMT
+        date: Fri, 13 Dec 2024 09:20:34 GMT
         content-type: application/octet-stream
         content-length: '4000'
       body:
@@ -124,7 +124,7 @@ http_interactions:
   - request:
       method: GET
       path: >-
-        /data/datasets/Organization_X/l4_sample/layers/color/data?mag=2-2-1&x=3456&y=3322&z=1204&width=21&height=6&depth=10&token=IoMFwd2H-02oM-BQMVHoIg
+        /data/datasets/Organization_X/l4_sample/layers/color/data?mag=2-2-1&x=3456&y=3322&z=1204&width=21&height=6&depth=10&token=3KhTq4TUt_f7SFVN-57jzw
       headers:
         host: localhost:9000
         accept: '*/*'
@@ -146,7 +146,7 @@ http_interactions:
         access-control-allow-origin: '*'
         access-control-expose-headers: MISSING-BUCKETS
         x-permitted-cross-domain-policies: master-only
-        date: Mon, 09 Dec 2024 14:09:28 GMT
+        date: Fri, 13 Dec 2024 09:20:34 GMT
         content-type: application/octet-stream
         content-length: '1260'
       body:
@@ -156,7 +156,7 @@ http_interactions:
   - request:
       method: GET
       path: >-
-        /data/datasets/Organization_X/l4_sample/layers/color/data?mag=4-4-1&x=3456&y=3320&z=1204&width=11&height=4&depth=10&token=IoMFwd2H-02oM-BQMVHoIg
+        /data/datasets/Organization_X/l4_sample/layers/color/data?mag=4-4-1&x=3456&y=3320&z=1204&width=11&height=4&depth=10&token=3KhTq4TUt_f7SFVN-57jzw
       headers:
         host: localhost:9000
         accept: '*/*'
@@ -178,7 +178,7 @@ http_interactions:
         access-control-allow-origin: '*'
         access-control-expose-headers: MISSING-BUCKETS
         x-permitted-cross-domain-policies: master-only
-        date: Mon, 09 Dec 2024 14:09:29 GMT
+        date: Fri, 13 Dec 2024 09:20:34 GMT
         content-type: application/octet-stream
         content-length: '440'
       body:
@@ -188,7 +188,7 @@ http_interactions:
   - request:
       method: GET
       path: >-
-        /data/datasets/Organization_X/l4_sample/layers/color/data?mag=8-8-2&x=3456&y=3320&z=1204&width=6&height=2&depth=5&token=IoMFwd2H-02oM-BQMVHoIg
+        /data/datasets/Organization_X/l4_sample/layers/color/data?mag=8-8-2&x=3456&y=3320&z=1204&width=6&height=2&depth=5&token=3KhTq4TUt_f7SFVN-57jzw
       headers:
         host: localhost:9000
         accept: '*/*'
@@ -210,7 +210,7 @@ http_interactions:
         access-control-allow-origin: '*'
         access-control-expose-headers: MISSING-BUCKETS
         x-permitted-cross-domain-policies: master-only
-        date: Mon, 09 Dec 2024 14:09:29 GMT
+        date: Fri, 13 Dec 2024 09:20:34 GMT
         content-type: application/octet-stream
         content-length: '60'
       body:
@@ -220,7 +220,7 @@ http_interactions:
   - request:
       method: GET
       path: >-
-        /data/datasets/Organization_X/l4_sample/layers/color/data?mag=16-16-4&x=3456&y=3312&z=1204&width=3&height=2&depth=3&token=IoMFwd2H-02oM-BQMVHoIg
+        /data/datasets/Organization_X/l4_sample/layers/color/data?mag=16-16-4&x=3456&y=3312&z=1204&width=3&height=2&depth=3&token=3KhTq4TUt_f7SFVN-57jzw
       headers:
         host: localhost:9000
         accept: '*/*'
@@ -242,7 +242,7 @@ http_interactions:
         access-control-allow-origin: '*'
         access-control-expose-headers: MISSING-BUCKETS
         x-permitted-cross-domain-policies: master-only
-        date: Mon, 09 Dec 2024 14:09:29 GMT
+        date: Fri, 13 Dec 2024 09:20:34 GMT
         content-type: application/octet-stream
         content-length: '18'
       body:
@@ -251,7 +251,7 @@ http_interactions:
   - request:
       method: GET
       path: >-
-        /data/datasets/Organization_X/l4_sample/layers/segmentation/data?mag=1-1-1&x=3457&y=3323&z=1204&width=40&height=10&depth=10&token=IoMFwd2H-02oM-BQMVHoIg
+        /data/datasets/Organization_X/l4_sample/layers/segmentation/data?mag=1-1-1&x=3457&y=3323&z=1204&width=40&height=10&depth=10&token=3KhTq4TUt_f7SFVN-57jzw
       headers:
         host: localhost:9000
         accept: '*/*'
@@ -273,7 +273,7 @@ http_interactions:
         access-control-allow-origin: '*'
         access-control-expose-headers: MISSING-BUCKETS
         x-permitted-cross-domain-policies: master-only
-        date: Mon, 09 Dec 2024 14:09:29 GMT
+        date: Fri, 13 Dec 2024 09:20:34 GMT
         content-type: application/octet-stream
         content-length: '16000'
       body:
@@ -283,7 +283,7 @@ http_interactions:
   - request:
       method: GET
       path: >-
-        /data/datasets/Organization_X/l4_sample/layers/segmentation/data?mag=2-2-1&x=3456&y=3322&z=1204&width=21&height=6&depth=10&token=IoMFwd2H-02oM-BQMVHoIg
+        /data/datasets/Organization_X/l4_sample/layers/segmentation/data?mag=2-2-1&x=3456&y=3322&z=1204&width=21&height=6&depth=10&token=3KhTq4TUt_f7SFVN-57jzw
       headers:
         host: localhost:9000
         accept: '*/*'
@@ -305,7 +305,7 @@ http_interactions:
         access-control-allow-origin: '*'
         access-control-expose-headers: MISSING-BUCKETS
         x-permitted-cross-domain-policies: master-only
-        date: Mon, 09 Dec 2024 14:09:29 GMT
+        date: Fri, 13 Dec 2024 09:20:35 GMT
         content-type: application/octet-stream
         content-length: '5040'
       body:
@@ -315,7 +315,7 @@ http_interactions:
   - request:
       method: GET
       path: >-
-        /data/datasets/Organization_X/l4_sample/layers/segmentation/data?mag=4-4-1&x=3456&y=3320&z=1204&width=11&height=4&depth=10&token=IoMFwd2H-02oM-BQMVHoIg
+        /data/datasets/Organization_X/l4_sample/layers/segmentation/data?mag=4-4-1&x=3456&y=3320&z=1204&width=11&height=4&depth=10&token=3KhTq4TUt_f7SFVN-57jzw
       headers:
         host: localhost:9000
         accept: '*/*'
@@ -337,7 +337,7 @@ http_interactions:
         access-control-allow-origin: '*'
         access-control-expose-headers: MISSING-BUCKETS
         x-permitted-cross-domain-policies: master-only
-        date: Mon, 09 Dec 2024 14:09:29 GMT
+        date: Fri, 13 Dec 2024 09:20:35 GMT
         content-type: application/octet-stream
         content-length: '1760'
       body:
@@ -347,7 +347,7 @@ http_interactions:
   - request:
       method: GET
       path: >-
-        /data/datasets/Organization_X/l4_sample/layers/segmentation/data?mag=8-8-2&x=3456&y=3320&z=1204&width=6&height=2&depth=5&token=IoMFwd2H-02oM-BQMVHoIg
+        /data/datasets/Organization_X/l4_sample/layers/segmentation/data?mag=8-8-2&x=3456&y=3320&z=1204&width=6&height=2&depth=5&token=3KhTq4TUt_f7SFVN-57jzw
       headers:
         host: localhost:9000
         accept: '*/*'
@@ -369,7 +369,7 @@ http_interactions:
         access-control-allow-origin: '*'
         access-control-expose-headers: MISSING-BUCKETS
         x-permitted-cross-domain-policies: master-only
-        date: Mon, 09 Dec 2024 14:09:30 GMT
+        date: Fri, 13 Dec 2024 09:20:35 GMT
         content-type: application/octet-stream
         content-length: '240'
       body:
@@ -379,7 +379,7 @@ http_interactions:
   - request:
       method: GET
       path: >-
-        /data/datasets/Organization_X/l4_sample/layers/segmentation/data?mag=16-16-4&x=3456&y=3312&z=1204&width=3&height=2&depth=3&token=IoMFwd2H-02oM-BQMVHoIg
+        /data/datasets/Organization_X/l4_sample/layers/segmentation/data?mag=16-16-4&x=3456&y=3312&z=1204&width=3&height=2&depth=3&token=3KhTq4TUt_f7SFVN-57jzw
       headers:
         host: localhost:9000
         accept: '*/*'
@@ -401,7 +401,7 @@ http_interactions:
         access-control-allow-origin: '*'
         access-control-expose-headers: MISSING-BUCKETS
         x-permitted-cross-domain-policies: master-only
-        date: Mon, 09 Dec 2024 14:09:30 GMT
+        date: Fri, 13 Dec 2024 09:20:36 GMT
         content-type: application/octet-stream
         content-length: '72'
       body:
