--- a/webknossos/pyproject.toml
+++ b/webknossos/pyproject.toml
@@ -38,12 +38,10 @@ dependencies = [
     "cattrs >=22.0.0",
     "certifi>=2023",
     "cluster-tools",
-    "fsspec ~=2024.6.0",
     "httpx ~=0.27.0",
     "loxun ~=2.0.0",
     "natsort ~=8.4.0",
     "networkx ~=3.2.1",
-    "numcodecs ~=0.12",
     "numpy ~=2.0.0",
     "pims ~=0.7.0",
     "psutil ~=6.0.0",
@@ -51,12 +49,11 @@ dependencies = [
     "python-dotenv ~=1.0.1",
     "rich ~=13.8.0",
     "scipy ~=1.13",
+    "tensorstore~=0.1.69",
     "typer ~=0.12.5",
     "typing-extensions ~=4.0",
     "universal-pathlib ~=0.2",
     "wkw ==1.1.24",
-    "zarr ~=2.18.0",
-    "zarrita ==0.2.7",
     "zipp ~=3.5.0",
 ]
 
@@ -91,7 +88,7 @@ all = [
 [tool.uv]
 extra-index-url = ["https://pypi.scm.io/simple"]
 dev-dependencies = [
-    "dask[distributed] ~=2023.9.1; python_version >='3.9'",
+    "fsspec ~=2024.6.0",
     "hypothesis ~=6.35.0",
     "icecream ~=2.1.1",
     "inducoapi ~=2.0.2",
@@ -160,7 +157,7 @@ target-version = "py39"
 # PERF = Perflint https://docs.astral.sh/ruff/rules/#perflint-perf
 # FIX = Flake8 fixme https://docs.astral.sh/ruff/rules/#flake8-fixme-fix
 # ARG = Flake8 unused-arguments https://docs.astral.sh/ruff/rules/#flake8-unused-arguments-arg
-select = ["F", "E", "W", "I", "A", "PERF", "FIX", "ARG"]
+select = ["F", "E", "W", "I", "A", "PERF", "FIX", "ARG", "T201"]
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
 fixable = ["ALL"]
@@ -168,6 +165,9 @@ fixable = ["ALL"]
 # E501 Line too long https://docs.astral.sh/ruff/rules/line-too-long/
 # E712 true-false-comparison https://docs.astral.sh/ruff/rules/true-false-comparison/
 ignore = ["E501", "E712"]
+
+[tool.ruff.lint.per-file-ignores]
+"{examples,tests,script_collection,webknossos/cli}/*" = ["T201"]
 
 [tool.ruff.format]
 # Like Black, use double quotes for strings.
