--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -20,11 +20,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
+    - name: Install proxay
+      run: npm install -g proxay
         
     - name: Install uv
       uses: astral-sh/setup-uv@v3
       with:
-        version: "0.4.19"
+        version: "0.4.30"
         
     - name: Set up Python ${{ matrix.python-version }}
       run: uv python install ${{ matrix.python-version }}
