--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -25,6 +25,9 @@ jobs:
       uses: astral-sh/setup-uv@v3
       with:
         version: "0.4.19"
+
+    - name: Install proxay
+      run: npm install -g proxay
         
     - name: Set up Python ${{ matrix.python-version }}
       run: uv python install ${{ matrix.python-version }}
