--- a/webknossos/tests/cassettes/test_api_client/test_generate_token_for_data_store.yml
+++ b/webknossos/tests/cassettes/test_api_client/test_generate_token_for_data_store.yml
@@ -22,10 +22,10 @@ http_interactions:
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Thu, 19 Dec 2024 10:06:56 GMT
+        date: Thu, 09 Jan 2025 12:57:44 GMT
         content-type: application/json
         content-length: '34'
       body:
         encoding: utf8
-        data: '{"token":"toJpE2kCl2MjA1znMq-uww"}'
+        data: '{"token":"DffTEcoS4hZ0cxvdywDMeA"}'
         compression: none
