--- a/webknossos/tests/cassettes/test_api_client/test_generate_token_for_data_store.yml
+++ b/webknossos/tests/cassettes/test_api_client/test_generate_token_for_data_store.yml
@@ -6,7 +6,7 @@ http_interactions:
         host: localhost:9000
         content-length: '0'
         accept: '*/*'
-        accept-encoding: gzip, deflate, zstd
+        accept-encoding: gzip, deflate
         connection: keep-alive
         user-agent: python-httpx/0.27.2
         x-auth-token: >-
@@ -22,10 +22,10 @@ http_interactions:
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Thu, 09 Jan 2025 14:30:33 GMT
+        date: Mon, 20 Jan 2025 13:33:03 GMT
         content-type: application/json
         content-length: '34'
       body:
         encoding: utf8
-        data: '{"token":"NEdSmVtaQai_RdfG3fDxNQ"}'
+        data: '{"token":"PxDd6hXgE0biL9iVj3wTJQ"}'
         compression: none
