--- a/webknossos/tests/cassettes/test_user/test_get_logged_time.yml
+++ b/webknossos/tests/cassettes/test_user/test_get_logged_time.yml
@@ -5,7 +5,7 @@ http_interactions:
       headers:
         host: localhost:9000
         accept: '*/*'
-        accept-encoding: gzip, deflate, zstd
+        accept-encoding: gzip, deflate
         connection: keep-alive
         user-agent: python-httpx/0.27.2
         x-auth-token: >-
@@ -21,7 +21,7 @@ http_interactions:
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Thu, 09 Jan 2025 14:15:41 GMT
+        date: Mon, 20 Jan 2025 13:17:37 GMT
         content-type: application/json
         content-length: '682'
       body:
@@ -35,7 +35,7 @@ http_interactions:
       headers:
         host: localhost:9000
         accept: '*/*'
-        accept-encoding: gzip, deflate, zstd
+        accept-encoding: gzip, deflate
         connection: keep-alive
         user-agent: python-httpx/0.27.2
         x-auth-token: >-
@@ -51,7 +51,7 @@ http_interactions:
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Thu, 09 Jan 2025 14:15:41 GMT
+        date: Mon, 20 Jan 2025 13:17:37 GMT
         content-type: application/json
         content-length: '625'
       body:
