--- a/webknossos/pyproject.toml
+++ b/webknossos/pyproject.toml
@@ -48,7 +48,7 @@ dependencies = [
     "python-dateutil ~=2.8.0",
     "python-dotenv ~=1.0.1",
     "rich ~=13.8.0",
-    "scipy ~=1.13",
+    "scipy >=1.13",
     "tensorstore~=0.1.69",
     "typer ~=0.12.5",
     "typing-extensions ~=4.0",
