--- a/webknossos/tests/cassettes/test_api_client/test_datastore_list.yml
+++ b/webknossos/tests/cassettes/test_api_client/test_datastore_list.yml
@@ -21,11 +21,11 @@ http_interactions:
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Tue, 28 Jan 2025 14:09:03 GMT
+        date: Tue, 28 Jan 2025 17:11:50 GMT
         content-type: application/json
-        content-length: '147'
+        content-length: '129'
       body:
         encoding: utf8
         data: >-
-          [{"name":"localhost","url":"http://localhost:9000","isScratch":false,"allowsUpload":true,"jobsSupportedByAvailableWorkers":[],"jobsEnabled":false}]
+          [{"name":"localhost","url":"http://localhost:9000","allowsUpload":true,"jobsSupportedByAvailableWorkers":[],"jobsEnabled":false}]
         compression: none
