Enable uv cache.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,8 @@ jobs:
         uses: astral-sh/setup-uv@v3
         with:
           version: "0.5.26"
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
       
       - name: Set up Python ${{ matrix.python-version }}
         run: uv python install ${{ matrix.python-version }}
@@ -170,6 +172,8 @@ jobs:
         with:
           # Install a specific version of uv.
           version: "0.5.26"
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
 
       - name: Install proxay
         run: npm install -g proxay
