--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -162,7 +162,7 @@ jobs:
       run:
         working-directory: webknossos
     env:
-      UV_CACHE_DIR: /tmp/.uv-cache
+      UV_CACHE_DIR: ~/.uv_cache
 
     steps:
       - uses: actions/checkout@v3
@@ -182,7 +182,7 @@ jobs:
       - name: Restore uv cache
         uses: actions/cache@v4
         with:
-          path: /tmp/.uv-cache
+          path: ~/.uv_cache
           key: uv-${{ matrix.python-version }}-${{ hashFiles('webknossos/uv.lock') }}
           restore-keys: |
             uv-${{ matrix.python-version }}-${{ hashFiles('webknossos/uv.lock') }}
@@ -211,7 +211,7 @@ jobs:
         env:
           PYTHON_VERSION: ${{ matrix.python-version }}
           COVERAGE_FILE: "~/.local/share/coverage/${{ matrix.group }}.coverage"
-          UV_CACHE_DIR: /tmp/.uv-cache
+          UV_CACHE_DIR: ~/.uv_cache
         run: uv run bash --all-extras --python ${{ matrix.python-version }} ./test.sh --splits 3 --group ${{ matrix.group }} --splitting-algorithm least_duration --cov=webknossos --cov-report=
 
       - name: Python tests
@@ -219,7 +219,7 @@ jobs:
         timeout-minutes: 30
         env:
           PYTHON_VERSION: ${{ matrix.python-version }}
-          UV_CACHE_DIR: /tmp/.uv-cache
+          UV_CACHE_DIR: ~/.uv_cache
         run: uv run bash --all-extras --python ${{ matrix.python-version }} ./test.sh --splits 3 --group ${{ matrix.group }} --splitting-algorithm least_duration
 
       - name: Minimize uv cache
