--- a/webknossos/pyproject.toml
+++ b/webknossos/pyproject.toml
@@ -42,7 +42,7 @@ dependencies = [
     "loxun ~=2.0.0",
     "natsort ~=8.4.0",
     "networkx ~=3.2.1",
-    "numpy ~=2.0.0",
+    "numpy >=2.0.0,<3.0.0",
     "pims ~=0.7.0",
     "psutil ~=6.0.0",
     "python-dateutil ~=2.8.0",
